Issue #1676 - Removing deprecated methods and classes
Signed-off-by: Joakim Erdfelt <joakim@erdfelt.com>